2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.c: (procman_data_new):
	* src/procman.h:
	* src/proctable.c: (sort_ints), (proctable_new),
	(update_info_mutable_cols), (insert_info_to_tree), (update_info),
	(get_info):
	* src/proctable.h: Added a new col that displays cpu time.
	Also merged duplicate functions.
	glibtop_get_proc_time() is called only once per process on every update.

2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h: changed type of procdata->memxserver as libwnck's uses
	an unsigned long not a guint64.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/infoview.c: (infoview_create), (infoview_update):
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (toggle_infoview),
	(update_sensitivity):
	* src/procman.c: (procman_data_new):
	* src/procman.h: Moved a bunch of global variables from infoview.c
	to procdata->infoview.*.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/infoview.c:
	* src/interface.c: (make_title_label):
	* src/interface.h: Merged multiple make_title_label().
	Fixed float constants.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/infoview.c: (infoview_toggle_button_get_msg):
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (toggle_infoview):
	* src/procman.c: (main): Fixed More/Less info state.
	Closes #170141.
	
	Merged some strings.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: (create_sys_view):
	* src/openfiles.c: (compare_open_files): don't use C++-style comments.
	Patch by jensgr@gmx.net (Jens Granseuer).

2005-03-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procactions.c: (renice_single_process), (renice),
	(kill_single_process), (kill_process):
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	* src/procdialogs.h:
	* src/proctable.h: Started rework the renice/kill actions.
	Removed 1 global variable.
	Better error handling if renice/kill fails.

2005-03-11  Benoît Dejean  <TazForEver@dlfp.org>
