@@ -1,5 +1,10 @@
 2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/proctable.c: (format_duration_for_display),
+	(update_info_mutable_cols): top-like time format.
+
+2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/procman.c: (procman_data_new):
 	* src/procman.h:
 	* src/proctable.c: (sort_ints), (proctable_new),
